# imageoptim-pro

./: .gitignore  README.md  icon.icns  image_resizer.py  install.sh  pyproject.toml
.github/workflows/: build.yml
