[project]
name = "ImageOptimPro"
version = "1.0.0"
dependencies = ["flet==0.85.2", "pillow>=10.0.0", "certifi"]

[tool.flet]
app_name = "ImageOptimPro"
description = "Redimensionnez et compressez vos images par lot"
product_name = "ImageOptim Pro"
org = "be.gmonseur"
company = "gmonseur.be"
icon = "icon.png"
